--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,11 @@ body {
 }
 
 .animated-sun {
-  animation: sunPulse 10s ease-in-out 1;
+  animation: sunPulse 14 ease-in-out 1;
 }
 
 @keyframes sunPulse {
   0% { transform: scale(1); }
-  50% { transform: scale(1.15); }
+  50% { transform: scale(1.19); }
   100% { transform: scale(1); }
 }
