--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,15 @@ body {
 /* جلوگیری از زیرخط دار شدن لینک */
 a {
   text-decoration: none;
+}@keyframes sunSpinSlow {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.animated-sun-main {
+  animation: sunSpinSlow 20s linear infinite;
 }
