--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'IranSans';
-  src: url('./fonts/iransansdn.ttf') format('truetype');
+  font-family: 'iranSans';
+  src: url('/fonts/iransansdn.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
