--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'iranSans';
+  font-family: 'IranSans';
   src: url('/fonts/iransansdn.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
